additionalStyleSheets/RPSGameStyle.css
.RPSgame-screen {
    position: absolute;
    margin: auto;
    width: 450px;
    height: 450px;
    background-color: #ffffff;
    border-radius: 1%;
    filter: drop-shadow(1px 1px gray);
    margin: auto;
    margin-top: 5x;
    display: flex;
    flex-direction: column;
    align-items: center;
    z-index: 6;
}

#RPS-button1, .RPS-any-button {
    margin: auto;
    z-index: 6;
    color: red;
    background-color: #ffffff;
    filter: drop-shadow(1px 1px red);
    margin: 15px 0 15px 0;
    /*border: 2px solid; border-image: linear-gradient(to bottom, rgba(1, 255, 255, 0.895), rgba(0, 0, 255, 0)); */
    border-image-slice: 1;
}

#RPS-button1:hover, .RPS-any-button {
    color: purple;
}


#RPS-take-me-backBTN {
    position: fixed;
    bottom: 0;
    right: 0;
    z-index: 4;
    background-color: #ffffff;
    filter: drop-shadow(1px 1px red);
}

#RPS-character-box {
    width: 250px;
    height: 250px;
    margin: auto;
    transition: 1s;
    background-color: yellow;
    filter: drop-shadow(2px 2px 12px red);
}

#RPS-RPSbuttons-3ofthem, #RPSPlaceholder1 {
    height: 25px;
    display: none;
}

